rns-lang/tests/snapshots/parser-directive_header_trailing_tokens-dot_super.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.class HelloWorld       .super java/lang/Object

.end method
----- STDOUT -----

----- STDERR -----
Error: trailing characters after 'HelloWorld'
   ╭─[ test_data/integration/parser/directive_header_trailing_tokens/dot_super.ja:1:25 ]
   │
 1 │ .class HelloWorld       .super java/lang/Object
   │                         ───────────┬───────────  
   │                                    ╰───────────── Class headers must end after the name.
   │ 
   │ Note: The class definition should end after the class name 'HelloWorld'.
   │       Consider starting a new line for the '.super' directive.
───╯
